fix image width on mobile device

--- a/user/css/app.css
+++ b/user/css/app.css
@@ -28,3 +28,7 @@
   content: "";
   padding: 0;
 }
+
+img {
+  width: 100%;
+}
